Chat - fix various alignment issues in the working set

--- a/src/vs/workbench/contrib/chat/browser/widget/media/chat.css
+++ b/src/vs/workbench/contrib/chat/browser/widget/media/chat.css
@@ -776,7 +776,7 @@ have to be updated for changes to the rules above, or to support more deeply nes
 }
 
 .interactive-session .chat-editing-session .chat-editing-session-container {
-	padding: 6px 3px 6px 3px;
+	padding: 4px 3px 4px 3px;
 	box-sizing: border-box;
 	background-color: var(--vscode-editor-background);
 	border: 1px solid var(--vscode-input-border, transparent);
@@ -817,13 +817,15 @@ have to be updated for changes to the rules above, or to support more deeply nes
 	flex-direction: row;
 	justify-content: space-between;
 	gap: 6px;
-	padding-right: 4px;
+	padding-right: 3px;
+	height: 22px;
+	line-height: 22px;
 	cursor: pointer;
 }
 
 .interactive-session .chat-editing-session .chat-editing-session-container .chat-editing-session-overview > .working-set-title {
 	color: var(--vscode-descriptionForeground);
-	font-size: 11px;
+	font-size: 12px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -839,6 +841,7 @@ have to be updated for changes to the rules above, or to support more deeply nes
 	display: inline-flex;
 	gap: 4px;
 	margin-left: 6px;
+	font-size: 11px;
 	font-weight: 500;
 }
 
@@ -851,7 +854,7 @@ have to be updated for changes to the rules above, or to support more deeply nes
 }
 
 .interactive-session .chat-editing-session .chat-editing-session-list .working-set-line-counts {
-	margin-left: 6px;
+	margin: 0 6px;
 	display: inline-flex;
 	gap: 4px;
 	font-size: 11px;
@@ -900,10 +903,10 @@ have to be updated for changes to the rules above, or to support more deeply nes
 }
 
 .interactive-session .chat-editing-session .monaco-button {
-	height: 18px;
+	height: 22px;
 	width: fit-content;
 	padding: 2px 6px;
-	font-size: 11px;
+	font-size: 12px;
 }
 
 .interactive-session .chat-editing-session .chat-editing-session-toolbar-actions .monaco-button:hover {
@@ -1032,7 +1035,7 @@ have to be updated for changes to the rules above, or to support more deeply nes
 	border-color: transparent;
 	color: var(--vscode-icon-foreground);
 	cursor: pointer;
-	padding: 0 1px;
+	padding: 0 3px;
 	border-radius: 2px;
 	display: inline-flex;
 }
